--- a/index.html
+++ b/index.html
@@ -42,11 +42,31 @@
         margin: 20px;
     }
 
+    p5   {
+        color: lightgray;
+        font-size: 17px;
+        background-color: rgba(211, 211, 211, 0);
+        width: 450px;
+        border: 0px ;
+        padding: 50px;
+        margin: 20px;
+    }
+
     p3   {
         color: lightgray;
         font-size: 17px;
         background-color: rgba(211, 211, 211, 0);
         width: 700px;
+        border: 0px ;
+        padding: 50px;
+        margin: 20px;
+    }
+
+    p4   {
+        color: rgba(105, 105, 105, 0.61);
+        font-size: 14px;
+        background-color: rgba(211, 211, 211, 0);
+        width: 460px;
         border: 0px ;
         padding: 50px;
         margin: 20px;
@@ -147,12 +167,12 @@
     <div class="text gradient-2">#Tim Booker</div>
     <div class="text glow-2">#Tim Booker</div>
     
-    <p style = "position:absolute; left:50px; top:150px;">
+    <p style = "position:absolute; left:150px; top:150px;">
     <i></i> 
     <b>TIM BOOKER</b>
     <br><br>
     Ph.D. candidate at the <br><a href="https://www.csh.ac.at/">Complexity Science Hub, Vienna</a>.
-    <br><br>Orininally from Perth, Australia.
+    <br><br>Originally from Perth, Australia.
     <br><br>I want to rewire our systems to create a humanity 
     that is sustainable, equitable, fulfilling, and capable of managing
     the current <a href="https://cascadeinstitute.org/technical-paper/what-is-a-global-polycrisis/">
@@ -160,21 +180,29 @@
     
     </p>
   
-    <p2 style = "position:absolute; left:50px; top:380px;">
+    <p2 style = "position:absolute; left:150px; top:355px;">
     <br><br>
     I'm broadly interested in developing complex systems theory for 
     governance, ideology, and social technology, with the intent to change 
     how our systems work for the betterment and sustainability of all human life.
 
-    <br><br>
-    Previously I was a visiting scholar at <a href="https://www.gsais.kyoto-u.ac.jp/en-top/overview">Shishu-kan, Kyoto University</a>, 
-    where I studied the entropy of complex systems.
     </p2>
+    <p5 style = "position:absolute; left:150px; top:520px;">
+        Previously I was a visiting scholar at <a href="https://www.gsais.kyoto-u.ac.jp/en-top/overview">Shishu-kan, Kyoto University</a>,  
+    where I studied the entropy of complex systems.
+    </p5>
+
+   
   
-    <p3 style = "position:absolute; left:50px; top:660px;">
+    <p3 style = "position:absolute; left:150px; top:630px;">
     Research interests&nbsp;&nbsp;|&nbsp;&nbsp;Personal interests&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://twitter.com/tims_not_real">Twitter</a>
     </p3>
 
+
+
+    <p4 style = "position:absolute; left:150px; top:665px;">
+        Background image credits: @sudheernunna on Unsplash
+    </p4>
 </body>    
 
 
