--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 
 
     body {
-        background-image: url('dan-cristian-padure-SMSLyc9FHl0-unsplash - Copy.jpg');
-        /*background-image: url('daria-durand-ripples.jpg');*/
-        /*background-image: url(adrien-converse-contours.jpg);*/
-        /*background-image: radial-gradient(circle,rgba(0, 0, 0, 0.537) 80%,rgba(255, 255, 255, 0)),url(brandon-vazquez-koC5eG6v6ew-unsplash.jpg);*/
+        background-image: url('dan-cristian-padure-waves.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
@@ -34,20 +31,30 @@
             padding: 50px;
             margin: 0;
             position:absolute; 
-
         }
+
+    .txtbox2  {
+        left:80px; 
+        top:900px;    
+        width:380px;
+        position:absolute; 
+        color: rgba(211, 211, 211, 0.274);
+        font-family: Charter-Regular;
+        font-size: 17px;
+
+    }
 
     h1   {
         color: lightgray;
         font-family: Charter-Bold;
         font-size: 20px;
-        letter-spacing: 0px;    
     }
     p  {
         color: lightgray;
         font-family: Charter-Regular;
         font-size: 17px;
     }
+
 
     a:link { /*Link colours */
         color: rgb(33, 181, 244);
@@ -137,7 +144,7 @@
         <h1>
             Tim Booker
         </h1>
-        <p style>
+        <p>
         Welcome to my page. This is a space for you to learn about my research, thoughts, and character. 
         <br><br>
         I hold the opinion that there are deep roots to the problem of human society. To understand these roots, I'm interested in the
@@ -157,12 +164,16 @@
         Swinburne University, Melbourne</a>, studying novel self-avoiding walk models under supervision by <a href="https://clisby.net/">Prof. Nathan Clisby</a>. 
         <br><br>
         Click below for more <br>
-        <a href="placeholder">Research</a>                      &nbsp;|&nbsp;
-        <a href="placeholder">About</a>                         &nbsp;|&nbsp;
+        Research                      &nbsp;|&nbsp;
+        About                         &nbsp;|&nbsp;
         <a href="https://twitter.com/tims_not_real">Twitter</a> 
 
-
     </div>
+
+    <div class="txtbox2">
+        Background credits: @dancristianpaduret on Unsplash
+    </div>
+
 </body>    
 
 
