--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    
     
   <div class="container">
-    <img src="dan-cristian-padure-SMSLyc9FHl0-unsplash.jpg" 
+    <img src="dan-cristian-padure.jpg" 
         alt="Depiction of aqua-blue waves with orange highlights flowing across a plane."
         width="36%"
         object-fit: cover;>
@@ -31,13 +31,13 @@
         style="width:80%;"
         class="centre">
         <p>
-            I'm a Vienna-based complex systems scientist. My background is in mathematical physics and I currently work on complex systems theory at
+            I'm a Vienna-based complex systems scientist. My background is in mathematical physics and I work on complex systems theory at
             <a href="https://www.csh.ac.at/">CSH, Vienna</a> as a Ph.D. candidate.  
             
             <br><br>
-            I'm working on understanding the deep roots to societal problems.  
-            My interests are governance, ideology, and social networks. 
-            In complex systems language, these correspond to the management, the comprising agents, 
+            I'm interested in understanding the deep roots to societal problems  
+            by looking at governance, ideology, and social networks, through a complex systems lens. 
+            These happen to correspond to the management, the comprising agents, 
             and the systemic properties of complex systems, respectively.
             <br><br>    
             Before CSH I was a visiting scholar at <a href="https://www.gsais.kyoto-u.ac.jp/en-top/overview">GSAIS, Kyoto University</a> 
@@ -51,13 +51,13 @@
         </p>
         <p style="text-align: center">
             Research                      &nbsp;|&nbsp;
-            CSH                           &nbsp;|&nbsp;
+            About me                      &nbsp;|&nbsp;
             <a href="https://twitter.com/tims_not_real">Twitter</a>
         </p>
     </div>
   </div> 
     <footer>
-      <p style = color:rgb(65,65,65)>Image credits to @dancristianpaduret on Unsplash</p>
+      <p style = color:rgba(74,73,73,0.5)>Image credits to @dancristianpaduret on Unsplash</p>
     </footer>
   </body>
 </html>
