--- a/web_design.html
+++ b/web_design.html
@@ -31,13 +31,24 @@
         style="width:80%;"
         class="centre">
         <p>
-            WIP           
+            <b>Web design</b> I help create personal websites for a very fair* price. I am completely transparent about what I can and can't do for you, and consultations are free. 
+            Just shoot me an email at mail@timbooker.net, or message me on Twitter, and we can have a chat.
+            <br>
+            <br>
+            <a href="https://catherinalee.com/">Here is a sample website</a> I created.
+            <br>
+            <br>
+            Please note that the domain name and hosting must be paid for and maintained by you, but I am happy to help you set it up at no extra cost.
+            <br>
+            <br>
+            *I'm not here to scam you! The price only depends on how much time I expect it will take me to create. Also, if you're a student or just starting off as a freelancer, 
+            I'm happy to offer good rates. 
         </p>
         <p style="text-align: center">
-          <em>Research</em>                                         &nbsp;|&nbsp;
-          <a href="about_me.html">About me</a>                      &nbsp;|&nbsp;
-          <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
-          <a href="web_design.html">Web design</a>
+            <a href="research.html">Research</a>                      &nbsp;|&nbsp;
+            <a href="about_me.html">About me</a>                      &nbsp;|&nbsp;
+            <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
+            <em>Web design</em>
         </p>
     </div>
   </div> 
