--- a/about_me.html
+++ b/about_me.html
@@ -48,6 +48,7 @@
             Outside of academics, I like techno, plants, and myopically approaching anything that sounds like an adventure. 
         </p>
         <p style="text-align: center">
+          <a href="index.html">Home</a>                             &nbsp;|&nbsp;
           <a href="research.html">Research</a>                      &nbsp;|&nbsp;
           <em>About me</em>                                         &nbsp;|&nbsp;
           <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
