--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="My research aims to unravel the deep 
+    roots of societal problems through the complex systems lens. I'm motivated 
+    by the simple idea that we must be able to do better. We have many 
+    concurrent global problems that are limited not by our understanding 
+    of them, but extraneous barriers like misinformation, corruption, and 
+    perverse interests.  Perhaps understanding how to overcome these barriers
+     is a science in and of itself?">
     <meta charset="UTF-8">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -14,12 +21,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="special.css">
     <link rel="stylesheet" href="metal.css">
-    <title>the abyssopelagic zone</title>
+    <title>Tim Booker</title>
 
   </head>
   
-  <body>
-   
+  <body>  
     
   <div class="container">
     <img src="dan-cristian-padure.jpg" 
@@ -53,6 +59,7 @@
            
         </p>
         <p style="text-align: center">
+          <em>Home</em>                                             &nbsp;|&nbsp;
           <a href="research.html">Research</a>                      &nbsp;|&nbsp;
           <a href="about_me.html">About me</a>                      &nbsp;|&nbsp;
           <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
