--- a/research.html
+++ b/research.html
@@ -34,6 +34,7 @@
             WIP           
         </p>
         <p style="text-align: center">
+          <a href="index.html">Home</a>                             &nbsp;|&nbsp;
           <em>Research</em>                                         &nbsp;|&nbsp;
           <a href="about_me.html">About me</a>                      &nbsp;|&nbsp;
           <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
