--- a/web_design.html
+++ b/web_design.html
@@ -45,6 +45,7 @@
             I'm happy to offer good rates. 
         </p>
         <p style="text-align: center">
+            <a href="index.html">Home</a>                             &nbsp;|&nbsp;
             <a href="research.html">Research</a>                      &nbsp;|&nbsp;
             <a href="about_me.html">About me</a>                      &nbsp;|&nbsp;
             <a href="https://twitter.com/tims_not_real">Twitter</a>   &nbsp;|&nbsp;
