--- a/about_me.html
+++ b/about_me.html
@@ -27,9 +27,11 @@
         width="36%"
         object-fit: cover;>
     <div class="text">
+      <a href="index.html">
         <img src="TBchrome2.png" alt="Tim Booker stylised in custom liquid chome font" 
         style="width:80%;"
         class="centre">
+        </a>
         <p>
             I was born in Perth, Western Australia. I lived here until mid-way through highschool when I dropped out and fled home to live in Melbourne, Victoria.
             <br><br>
