--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         width="36%"
         object-fit: cover;>
     <div class="text">
+        <a href="index.html">
         <img src="TBchrome2.png" alt="Tim Booker stylised in custom liquid chome font" 
         style="width:80%;"
         class="centre">
+        </a>
         <p>
             I'm a Vienna-based complex systems scientist. My background is in mathematical physics and I work on complex systems theory at
             <a href="https://www.csh.ac.at/">CSH, Vienna</a> as a Ph.D. candidate.  
