--- a/research.html
+++ b/research.html
@@ -27,9 +27,11 @@
         width="36%"
         object-fit: cover;>
     <div class="text">
+      <a href="index.html">
         <img src="TBchrome2.png" alt="Tim Booker stylised in custom liquid chome font" 
         style="width:80%;"
         class="centre">
+        </a>
         <p>
             WIP           
         </p>
