--- a/web_design.html
+++ b/web_design.html
@@ -27,9 +27,11 @@
         width="36%"
         object-fit: cover;>
     <div class="text">
+      <a href="index.html">
         <img src="TBchrome2.png" alt="Tim Booker stylised in custom liquid chome font" 
         style="width:80%;"
         class="centre">
+        </a>
         <p>
             <b>Web design</b> I help create personal websites for a very fair* price. I am completely transparent about what I can and can't do for you, and consultations are free. 
             Just shoot me an email at mail@timbooker.net, or message me on Twitter, and we can have a chat.
